--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <div class="gallery">
       <!-- Карточки изображений -->
     </div>
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more hidden">Load more</button>
     <!-- <include src="./partials/example.html"></include> -->
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
